# Hina

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  configure
.github/workflows/: rust.yml
crates/hina/: Cargo.toml
crates/hina-core/: Cargo.toml
crates/hina-core/src/: error.rs  func.rs  globals.rs  lib.rs  macros.rs  shared.rs
crates/hina-lc/: Cargo.toml
crates/hina-lc/src/: lib.rs
crates/hina-mkndir/: Cargo.toml
crates/hina-mkndir/src/: lib.rs
crates/hina-ph/: Cargo.toml
crates/hina-ph/src/: lib.rs
crates/hina-ps/: Cargo.toml
crates/hina-ps/src/: lib.rs
crates/hina-rb/: Cargo.toml
crates/hina-rb/src/: lib.rs
crates/hina-rm/: Cargo.toml
crates/hina-rm/src/: lib.rs
crates/hina-rn/: Cargo.toml
crates/hina-rn/src/: lib.rs
crates/hina/src/: config.rs  executor.rs  lib.rs  main.rs
man/: hina-lc.man  hina-mkndir.man  hina-ps.man  hina-rb.man  hina-rm.man  hina-rn.man  hina.man
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  executor.rs  func.rs  global.rs  mod.rs  rm.rs
src/event/: base.rs  fs.rs  holder.rs  mod.rs  process.rs  recycle.rs
test/: gen.sh
tests/modules/: consts.rs  mod.rs  test_rm.rs
