[package]
name = "hina"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
rand = "0.8.5"
chrono = "0.4.31"
execute = "0.2.12"
regex = "1.10.0"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
indexmap = "2.1.0"
colored = "2.0.4"
