[workspace]
resolver = "2"
members = [
    "crates/hina",
    "crates/hina-core",
    "crates/hina-lc",
    "crates/hina-mkndir",
    "crates/hina-ph",
    "crates/hina-ps",
    "crates/hina-rb",
    "crates/hina-rm",
    "crates/hina-rn"
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["B1ACK917"]
