[package]
name = "hina-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
colored = "2.0.4"
execute = "0.2.13"
rand = "0.8.5"
regex = "1.10.2"
serde_json = "1.0.108"
serde = { version = "1.0.196", features = ["derive"] }
indexmap = "2.2.1"
chrono = "0.4.33"
