[package]
name = "hina"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hina-core = { path = "../hina-core" }
hina-ph = { path = "../hina-ph" }
hina-rm = { path = "../hina-rm" }
hina-rb = { path = "../hina-rb" }
hina-ps = { path = "../hina-ps" }
hina-rn = { path = "../hina-rn" }
hina-lc = { path = "../hina-lc" }
hina-mkndir = { path = "../hina-mkndir" }
colored = "2.0.4"
serde = { version = "1.0.196", features = ["derive"] }
once_cell = "1.19.0"
indexmap = "2.2.1"
